# AI-Assignment-1

./: .gitignore  CMakeLists.txt  boss.cpp  entity.cpp  openai-helper.cpp  openai-helper.hpp  orb.cpp  player-shop.cpp  raylib-openai-npcs.cpp  sprite.hpp  textbox.cpp
resources/: New_World (New).tmx  New_World.tiled-session  New_World.tmj  New_World.tmx  ashlands.json  ashlands.tmx
resources/audio/: attribution.txt
